.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameofblocks-app-${K8S_NAMESPACE}
  labels:
    app: gameofblocks-app
    ref: ${K8S_NAMESPACE}
    track: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gameofblocks-app
      ref: ${K8S_NAMESPACE}
  template:
    metadata:
      labels:
        app: gameofblocks-app
        ref: ${K8S_NAMESPACE}
        track: stable
    spec:
      containers:
      - name: app
        image: ${CI_REGISTRY_IMAGE}:${CI_COMMIT_REF_NAME}
        imagePullPolicy: Always
        ports:
        - name: http-metrics
          protocol: TCP
          containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          timeoutSeconds: 2
