.k8s/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameofblocks-app

image:
  repository: registry.gitlab.com/gameofblock/gameofblocks/app
  tag: ${IMAGE_TAG}
  pullPolicy: IfNotPresent
  imagePullSecrets:
    - name: regcred

spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameofblocks-app
  template:
    metadata:
      labels:
        app: gameofblocks-app
    spec:
      containers:
        - name: app
          image: ${IMAGE_TAG}
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
