.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameofblocks-app-__CI_BUILD_REF_SLUG__
  namespace: gameofblocks-app
  labels:
    app: __CI_BUILD_REF_SLUG__
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/scheme: "http"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - name: http-metrics
      port: 8000
      protocol: TCP
  selector:
    app: __CI_BUILD_REF_SLUG__
